# FullStackBaseApp

./: .env.test  .gitignore  DOCKER_SETUP.md  README.md  docker-compose.yml
backend_fastapi/: .env.example  Dockerfile  ENV_VARIABLES.md  README.md  pyproject.toml
backend_fastapi/app/: main.py
backend_fastapi/app/api/: __init__.py  router.py
backend_fastapi/app/api/audio/: __init__.py  routes.py
backend_fastapi/app/api/auth/: __init__.py  routes.py
backend_fastapi/app/api/health/: __init__.py  routes.py
backend_fastapi/app/api/ui/: __init__.py  routes.py
backend_fastapi/app/api/user/: __init__.py  routes.py
backend_fastapi/app/core/: __init__.py  config.py  constants.py  dependencies.py  lifespan.py
backend_fastapi/app/core/database/: __init__.py  connection.py  interfaces.py
backend_fastapi/app/core/observability/: __init__.py  context.py  logging_config.py  tracing_config.py  tracing_route.py
backend_fastapi/app/schemas/: __init__.py
backend_fastapi/app/schemas/audio/: __init__.py  models.py  schemas.py
backend_fastapi/app/schemas/auth/: __init__.py  schemas.py
backend_fastapi/app/schemas/health/: __init__.py  schemas.py
backend_fastapi/app/schemas/user/: __init__.py  models.py  schemas.py
backend_fastapi/app/services/: __init__.py
backend_fastapi/app/templates/: stoplight_elements.html
backend_fastapi/app/utils/: __init__.py  audio_validation.py  id_utils.py  jwt.py  password.py  rsa_keys.py  s3_url_parser.py  validators.py
backend_fastapi/scripts/: format_keys_for_env.py  generate_rsa_keys.py
docs/: README.md  (+2 more)
(+57 files in other folders)
